# notas_de_python

./: .buildinfo  .gitignore  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: bib.md  intro.md
_sources/capitulo_04/: poo.ipynb
capitulo_04/: poo.html
docs/: bib.html  intro.html
docs/capitulo_04/: poo.html
notas_de_python/: _config.yml  _toc.yml  references.bib
notas_de_python/_build/.doctrees/: bib.doctree  environment.pickle  intro.doctree
notas_de_python/_build/.doctrees/capitulo_04/: poo.doctree
notas_de_python/_build/html/: .buildinfo  bib.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
notas_de_python/_build/html/_sources/capitulo_04/: poo.ipynb
notas_de_python/_build/html/capitulo_04/: poo.html
notas_de_python/_build/jupyter_execute/capitulo_04/: poo.ipynb  poo.py
notas_de_python/capitulo_04/: poo.ipynb
notas_de_python/docs/: intro.md
