[tool.poetry]
name = "notas-de-python"
version = "0.1.0"
description = ""
authors = ["Santiago Bello <isbelloq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
jupyter-book = "^0.13.2"
black = "^23.1.0"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
